--- a/LoginDemo/src/main/res/layout/activity_login.xml
+++ b/LoginDemo/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:labelFor="@+id/phone_input"
-                android:text="@string/phone_number"
+                android:text="@string/mobile_number"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
@@ -97,6 +97,45 @@
                 android:width="100dp"
                 android:hint="@string/enter_phone_number"
                 android:inputType="phone"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <!--密码输入框-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:labelFor="@+id/phone_input"
+                android:text="@string/password"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <EditText
+                android:id="@+id/password_input"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:width="100dp"
+                android:hint="@string/enter_password"
+                android:inputType="textPassword"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="25sp" />
 
