--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.YangZhao1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/gray</item>
+        <item name="colorPrimaryVariant">@color/gray</item>
+        <item name="colorOnPrimary">@color/gray</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -14,9 +14,19 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.YangZhao1.NoActionBar">
+    <style name="Theme.Wechat.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="App.Custom.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <!--        <item name="tint">@color/material_on_background_disabled</item>-->
+        <!--        <item name="android:imageButtonStyle">@color/material_on_background_disabled</item>-->
+    </style>
+
+    <style name="BottomNavigationTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/wechat_green</item>
+        <item name="android:textColorSecondary">@color/black</item>
     </style>
 
     <style name="Theme.YangZhao1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
