--- a/LoginDemo/src/main/res/navigation/mobile_navigation.xml
+++ b/LoginDemo/src/main/res/navigation/mobile_navigation.xml
@@ -13,19 +13,19 @@
 
     <fragment
         android:id="@+id/address_book"
-        android:name="edu.ytu.logindemo.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:name="edu.ytu.logindemo.ui.addressBook.AddressBookFragment"
+        android:label="@string/title_address_book"
+        tools:layout="@layout/fragment_address_book" />
 
     <fragment
         android:id="@+id/find"
-        android:name="edu.ytu.logindemo.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:name="edu.ytu.logindemo.ui.find.FindFragment"
+        android:label="@string/title_find"
+        tools:layout="@layout/fragment_find" />
 
     <fragment
         android:id="@+id/me"
-        android:name="edu.ytu.logindemo.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:name="edu.ytu.logindemo.ui.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
