--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="actionBarTheme">
+    </style>
+
     <style name="Theme.Wechat.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
