add button to toolbar

--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -15,6 +15,9 @@
     </style>
 
     <style name="actionBarTheme">
+        <item name="colorPrimary">@color/gray</item>
+        <item name="colorPrimaryVariant">@color/gray</item>
+        <item name="colorOnPrimary">@color/gray</item>
     </style>
 
     <style name="Theme.Wechat.NoActionBar">
