--- a/LoginDemo/src/main/res/values/dimens.xml
+++ b/LoginDemo/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">3dp</dimen>
-    <dimen name="toolbar_title_text_size">20sp</dimen>
+    <dimen name="toolbar_title_text_size">23sp</dimen>
+    <dimen name="toolbar_height">32dp</dimen>
 </resources>
