--- a/LoginDemo/src/main/res/layout/activity_login.xml
+++ b/LoginDemo/src/main/res/layout/activity_login.xml
@@ -1,191 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
-    <LinearLayout
+    <!--填充空白-->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
-        <!--填充空白-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+    <!--标题“手机号登录”-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/login_by_phone_number"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="40sp" />
 
-        <!--标题“手机号登录”-->
+    <!--使用相对布局设计输入框部分，更容易对齐每个元素，使得看起来更协调-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/i11"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/login_by_phone_number"
-            android:textAlignment="center"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:labelFor="@+id/location_input"
+            android:text="@string/country_or_region"
             android:textColor="@color/black"
-            android:textSize="40sp" />
+            android:textSize="26sp" />
 
-        <!--使用相对布局设计输入框部分，更容易对齐每个元素，使得看起来更协调-->
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/location_input"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_above="@+id/line1"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@+id/i11"
+            android:width="100dp"
+            android:autofillHints=""
+            android:background="@null"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:padding="0dp"
+            android:text="@string/china_mainland"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/i11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="30dp"
-                android:labelFor="@+id/location_input"
-                android:text="@string/country_or_region"
-                android:textColor="@color/black"
-                android:textSize="26sp" />
-
-            <EditText
-                android:id="@+id/location_input"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/line1"
-                android:layout_marginStart="15dp"
-                android:layout_toEndOf="@+id/i11"
-                android:width="100dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:inputType="text"
-                android:minHeight="48dp"
-                android:padding="0dp"
-                android:text="@string/china_mainland"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="25sp" />
-
-            <View
-                android:id="@+id/line1"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/i11"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="5dp"
-                android:background="#BFB6B9" />
-
-            <TextView
-                android:id="@+id/i21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/line1"
-                android:layout_alignStart="@+id/i11"
-                android:labelFor="@+id/phone_input"
-                android:text="@string/mobile_number"
-                android:textColor="@color/black"
-                android:textSize="26sp" />
-
-            <EditText
-                android:id="@+id/phone_input"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/line2"
-                android:layout_alignStart="@+id/location_input"
-                android:width="100dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:hint="@string/enter_phone_number"
-                android:inputType="phone"
-                android:padding="0dp"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="25sp" />
-
-            <View
-                android:id="@+id/line2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/i21"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="5dp"
-                android:background="#BFB6B9" />
-
-            <TextView
-                android:id="@+id/i31"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/line2"
-                android:layout_alignStart="@+id/i11"
-                android:labelFor="@+id/password_input"
-                android:text="@string/password"
-                android:textColor="@color/black"
-                android:textSize="26sp" />
-
-            <EditText
-                android:id="@+id/password_input"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/line2"
-                android:layout_alignStart="@+id/location_input"
-                android:width="100dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:hint="@string/enter_password"
-                android:inputType="textPassword"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="25sp" />
-        </RelativeLayout>
-
-        <!--填充空白-->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
-
-        <RelativeLayout
+        <View
+            android:id="@+id/line1"
             android:layout_width="match_parent"
-            android:layout_height="100dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_container"
-                android:layout_marginBottom="8dp"
-                android:text="@string/login_tip"
-                android:textAlignment="center" />
-
-            <!--登录按钮-->
-            <LinearLayout
-                android:id="@+id/btn_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/agree_and_continue"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#04BE02"
-                    android:text="@string/agree_and_continue" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-            </LinearLayout>
-        </RelativeLayout>
+            android:layout_height="1dp"
+            android:layout_below="@+id/i11"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#BFB6B9" />
 
         <TextView
+            android:id="@+id/i21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+            android:layout_below="@id/line1"
+            android:layout_alignStart="@+id/i11"
+            android:labelFor="@+id/phone_input"
+            android:text="@string/mobile_number"
+            android:textColor="@color/black"
+            android:textSize="26sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/phone_input"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/line2"
+            android:layout_alignStart="@+id/location_input"
+            android:width="100dp"
+            android:autofillHints=""
+            android:background="@null"
+            android:hint="@string/enter_phone_number"
+            android:inputType="phone"
+            android:padding="0dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="25sp" />
+
+        <View
+            android:id="@+id/line2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/i21"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="#BFB6B9" />
+
+        <TextView
+            android:id="@+id/i31"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/line2"
+            android:layout_alignStart="@+id/i11"
+            android:labelFor="@+id/password_input"
+            android:text="@string/password"
+            android:textColor="@color/black"
+            android:textSize="26sp" />
+
+        <EditText
+            android:id="@+id/password_input"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/line2"
+            android:layout_alignStart="@+id/location_input"
+            android:width="100dp"
+            android:autofillHints=""
+            android:background="@null"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="25sp" />
+
+        <View
+            android:id="@+id/line3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/i31"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="#BFB6B9" />
+    </RelativeLayout>
+
+    <!--填充空白-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2" />
+
+    <!--使用相对布局设计底部按钮与提示字符-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_container"
+            android:layout_marginBottom="8dp"
+            android:text="@string/login_tip"
+            android:textAlignment="center" />
+
+        <!--登录按钮-->
+        <LinearLayout
+            android:id="@+id/btn_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/agree_and_continue"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#04BE02"
+                android:text="@string/agree_and_continue" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+</LinearLayout>
