--- a/LoginDemo/src/main/res/values/dimens.xml
+++ b/LoginDemo/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="text_margin">3dp</dimen>
     <dimen name="toolbar_title_text_size">23sp</dimen>
     <dimen name="toolbar_height">32dp</dimen>
+    <dimen name="service_page_margin">10dp</dimen>
+    <dimen name="service_page_inner_margin">5dp</dimen>
+    <dimen name="service_page_padding">20dp</dimen>
+    <dimen name="service_text_size">16sp</dimen>
 </resources>
