--- a/LoginDemo/src/main/res/drawable/more.xml
+++ b/LoginDemo/src/main/res/drawable/more.xml
@@ -1,9 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
+    android:width="40dp"
+    android:height="40dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:pathData="M512,149.33c200.3,0 362.67,162.37 362.67,362.67s-162.37,362.67 -362.67,362.67S149.33,712.3 149.33,512 311.7,149.33 512,149.33zM512,213.33c-164.95,0 -298.67,133.72 -298.67,298.67s133.72,298.67 298.67,298.67 298.67,-133.72 298.67,-298.67 -133.72,-298.67 -298.67,-298.67zM544,320v160L704,480v64h-160L544,704h-64v-160.02L320,544v-64l160,-0.02L480,320h64z"
-      android:fillColor="#2c2c2c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M188.2,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M516.2,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M836.5,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
 </vector>
