--- a/LoginDemo/src/main/res/values/colors.xml
+++ b/LoginDemo/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="wechat_green">#04BE02</color>
-    <color name="gray">#DCDCDC</color>
+    <color name="gray">#E3E3E3</color>
 </resources>
