--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+<!--        <item name="alertDialogStyle">@drawable/bg_dialog_progress</item>-->
     </style>
 
     <style name="actionBarTheme">
