--- a/LoginDemo/src/main/res/layout/fragment_profile.xml
+++ b/LoginDemo/src/main/res/layout/fragment_profile.xml
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/logout_btn"
+        android:id="@+id/settings_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
