--- a/LoginDemo/src/main/res/layout/activity_main.xml
+++ b/LoginDemo/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
                 android:id="@+id/searchBtn"
                 android:layout_width="@dimen/toolbar_height"
                 android:layout_height="@dimen/toolbar_height"
+                android:layout_marginEnd="6dp"
+                android:paddingTop="1dp"
                 android:src="@drawable/search"
                 app:layout_constraintRight_toLeftOf="@+id/moreBtn"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +47,8 @@
                 android:id="@+id/moreBtn"
                 android:layout_width="@dimen/toolbar_height"
                 android:layout_height="@dimen/toolbar_height"
-                android:src="@drawable/more"
+                android:padding="2dp"
+                android:src="@drawable/add"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
