--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -69,7 +69,7 @@
         android:id="@+id/logout_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margin_func_divide"
         android:background="@color/white"
         android:gravity="center|center_horizontal"
         android:minHeight="55dp"
