--- a/LoginDemo/src/main/res/layout/fragment_profile.xml
+++ b/LoginDemo/src/main/res/layout/fragment_profile.xml
@@ -3,22 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     android:orientation="vertical"
-    tools:context=".ui.profile.ProfileFragment"
-    android:background="@color/gray">
+    tools:context=".ui.profile.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingTop="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="50dp">
+
         <ImageView
-            android:layout_marginStart="20dp"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginEnd="7dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="7dp"
             android:contentDescription="avatar"
             android:scaleType="fitCenter"
             android:src="@drawable/avatar" />
@@ -26,22 +27,23 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_marginTop="9dp"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="9dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="永远相信光"
                 android:textSize="28dp"
-                android:textStyle="bold"
-                android:text="永远相信光" />
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="微信号：XXXXXXXX" />
+                android:text="微信号：XXXXXXXX"
+                android:textSize="18dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -49,17 +51,18 @@
         android:id="@+id/service_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:layout_marginTop="@dimen/margin_func_divide"
         android:background="@color/white"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
+
         <ImageView
-            android:layout_marginStart="20dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="7dp"
             android:layout_gravity="center|center_vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="7dp"
             android:contentDescription="avatar"
             android:src="@drawable/pay" />
 
@@ -76,17 +79,18 @@
         android:id="@+id/settings_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:layout_marginTop="@dimen/margin_func_divide"
         android:background="@color/white"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
+
         <ImageView
-            android:layout_marginStart="20dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="7dp"
             android:layout_gravity="center|center_vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="7dp"
             android:contentDescription="avatar"
             android:src="@drawable/setting" />
 
