--- a/LoginDemo/src/main/res/values/dimens.xml
+++ b/LoginDemo/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="service_text_size">16sp</dimen>
     <dimen name="padding_option">8dp</dimen>
     <dimen name="margin_func_divide">8dp</dimen>
+    <dimen name="description_option">17sp</dimen>
 </resources>
