--- a/LoginDemo/src/main/res/layout/fragment_find.xml
+++ b/LoginDemo/src/main/res/layout/fragment_find.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="?colorPrimary"
     android:orientation="vertical"
     tools:context=".ui.find.FindFragment">
 
@@ -11,7 +11,7 @@
         android:id="@+id/dp_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
@@ -67,7 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
