--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,7 +25,6 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical|center"
             android:text="设置"
-            android:textColor="@android:color/black"
             android:textSize="@dimen/toolbar_title_text_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -44,7 +42,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:gravity="center_vertical"
         android:minHeight="55dp"
         android:orientation="horizontal">
@@ -55,7 +53,6 @@
             android:paddingStart="@dimen/padding_option"
             android:paddingEnd="@dimen/padding_option"
             android:text="跟随系统"
-            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <TextView
@@ -76,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:gravity="center_vertical"
         android:minHeight="55dp"
         android:orientation="horizontal">
@@ -87,7 +84,6 @@
             android:paddingStart="@dimen/padding_option"
             android:paddingEnd="@dimen/padding_option"
             android:text="深色模式"
-            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <TextView
@@ -109,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:gravity="center|center_horizontal"
         android:minHeight="55dp"
         android:orientation="horizontal">
