--- a/LoginDemo/src/main/res/layout/fragment_profile.xml
+++ b/LoginDemo/src/main/res/layout/fragment_profile.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="?colorPrimary"
     android:orientation="vertical"
     tools:context=".ui.profile.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="50dp">
 
@@ -52,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_func_divide"
-        android:background="@color/white"
+        android:background="?colorPrimaryVariant"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
