--- a/LoginDemo/src/main/res/values-night/themes.xml
+++ b/LoginDemo/src/main/res/values-night/themes.xml
@@ -1,16 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+    <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">#424040</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/wechat_green</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="SwitchTheme">
+        <item name="colorControlActivated">@color/wechat_green</item>
+    </style>
+
+    <style name="actionBarTheme" parent="Theme.Wechat">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+    </style>
+
+    <style name="BottomNavigationTheme" parent="Theme.AppCompat">
+        <item name="colorPrimary">@color/wechat_green</item>
+        <item name="android:textColorSecondary">@color/black</item>
+    </style>
+
 </resources>
