--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -1,36 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/gray</item>
-        <item name="colorPrimaryVariant">@color/gray</item>
-        <item name="colorOnPrimary">@color/gray</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/wechat_green</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-<!--        <item name="alertDialogStyle">@drawable/bg_dialog_progress</item>-->
     </style>
 
-    <style name="Theme.Wechat.Night" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_700</item>
-        <item name="colorPrimaryVariant">@color/purple_500</item>
-        <item name="colorOnPrimary">@color/purple_700</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-        <!--        <item name="alertDialogStyle">@drawable/bg_dialog_progress</item>-->
-    </style>
-
-    <style name="SwitchTheme" >
+    <style name="SwitchTheme">
         <item name="colorControlActivated">@color/wechat_green</item>
     </style>
 
@@ -40,19 +23,9 @@
         <item name="colorOnPrimary">@color/gray</item>
     </style>
 
-    <style name="Theme.Wechat.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.Wechat.Settings">
+    <style name="Theme.Wechat.Settings" parent="Theme.Wechat">
         <item name="colorPrimary">@color/gray</item>
         <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="App.Custom.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
-        <!--        <item name="tint">@color/material_on_background_disabled</item>-->
-        <!--        <item name="android:imageButtonStyle">@color/material_on_background_disabled</item>-->
     </style>
 
     <style name="BottomNavigationTheme" parent="Theme.AppCompat.Light">
@@ -60,7 +33,4 @@
         <item name="android:textColorSecondary">@color/black</item>
     </style>
 
-    <style name="Theme.YangZhao1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.YangZhao1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
