--- a/LoginDemo/src/main/res/layout/progress_spin.xml
+++ b/LoginDemo/src/main/res/layout/progress_spin.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_toast"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:theme="@style/ToastTheme">
 
     <ProgressBar
         android:id="@+id/custom_toast_image"
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:contentDescription="Hello world"
-        android:indeterminateTint="@color/white"
+        android:indeterminateTint="?colorSecondary"
         android:paddingTop="20dp" />
 
     <TextView
@@ -25,6 +25,6 @@
         android:contentDescription="To"
         android:gravity="center"
         android:text="Custom Toast"
-        android:textColor="@color/white"
+        android:textColor="?colorSecondary"
         android:textSize="30dp" />
 </LinearLayout>
