--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/gray</item>
@@ -15,6 +16,11 @@
 
     <style name="SwitchTheme">
         <item name="colorControlActivated">@color/wechat_green</item>
+    </style>
+
+    <style name="ToastTheme">
+        <item name="colorPrimary">#70000000</item>
+        <item name="colorSecondary">@color/white</item>
     </style>
 
     <style name="actionBarTheme">
