dark theme3(Icon)

--- a/LoginDemo/src/main/res/drawable/more.xml
+++ b/LoginDemo/src/main/res/drawable/more.xml
@@ -4,12 +4,12 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="?colorPrimary"
       android:pathData="M188.2,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="?colorPrimary"
       android:pathData="M516.2,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="?colorPrimary"
       android:pathData="M836.5,507.2m-91.5,0a91.5,91.5 0,1 0,183 0,91.5 91.5,0 1,0 -183,0Z"/>
 </vector>
