--- a/LoginDemo/src/main/res/drawable/back.xml
+++ b/LoginDemo/src/main/res/drawable/back.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="?colorPrimary"
       android:pathData="M624.79,204.05 L585.21,164.46 219.56,530.18 585.21,895.86 624.79,856.28 298.66,530.16Z"/>
 </vector>
