--- a/LoginDemo/src/main/res/layout/activity_main.xml
+++ b/LoginDemo/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
                 android:layout_marginEnd="6dp"
                 android:paddingTop="1dp"
                 android:src="@drawable/search"
+                android:theme="@style/IconTheme"
                 app:layout_constraintRight_toLeftOf="@+id/moreBtn"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,6 +49,7 @@
                 android:layout_height="@dimen/toolbar_height"
                 android:padding="2dp"
                 android:src="@drawable/add"
+                android:theme="@style/IconTheme"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
