--- a/LoginDemo/src/main/res/layout/activity_services.xml
+++ b/LoginDemo/src/main/res/layout/activity_services.xml
@@ -10,20 +10,21 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:theme="@style/actionBarTheme"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:theme="@style/actionBarTheme">
 
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:theme="@style/IconTheme" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="服务"
             android:gravity="center_vertical|center"
+            android:text="服务"
             android:textColor="@android:color/black"
             android:textSize="@dimen/toolbar_title_text_size"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/more" />
+            android:src="@drawable/more"
+            android:theme="@style/IconTheme" />
     </RelativeLayout>
 
     <TableLayout
