--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -18,7 +18,8 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:theme="@style/IconTheme" />
 
         <TextView
             android:layout_width="match_parent"
