--- a/LoginDemo/src/main/res/layout/dialog_logout.xml
+++ b/LoginDemo/src/main/res/layout/dialog_logout.xml
@@ -11,7 +11,6 @@
         android:padding="20dp"
         android:text="退出后不会删除任何历史数据，下次登录仍然可以使用本账号。"
         android:textAlignment="textStart"
-        android:textColor="@color/black"
         android:textSize="19sp" />
 
     <LinearLayout
@@ -27,7 +26,6 @@
             android:gravity="center|center_vertical"
             android:padding="12dp"
             android:text="取消"
-            android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold" />
 
@@ -40,7 +38,7 @@
             android:gravity="center|center_vertical"
             android:padding="12dp"
             android:text="退出"
-            android:textColor="#5B4B97"
+            android:textColor="#3F1CC1"
             android:textSize="19sp"
             android:textStyle="bold" />
     </LinearLayout>
