--- a/LoginDemo/src/main/res/values-night/themes.xml
+++ b/LoginDemo/src/main/res/values-night/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/wechat_green</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondaryVariant">#99000000</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -21,6 +21,10 @@
     <style name="ToastTheme">
         <item name="colorPrimary">#424040</item>
         <item name="colorSecondary">@color/white</item>
+    </style>
+
+    <style name="IconTheme">
+        <item name="colorPrimary">@color/white</item>
     </style>
 
     <style name="actionBarTheme" parent="Theme.Wechat">
