theme actionbar & toolbar

--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        android:theme="@style/actionBarTheme">
+        android:theme="@style/ActionBarTheme">
 
         <ImageView
             android:id="@+id/back"
