--- a/LoginDemo/src/main/res/values-night/themes.xml
+++ b/LoginDemo/src/main/res/values-night/themes.xml
@@ -27,7 +27,7 @@
         <item name="colorPrimary">@color/white</item>
     </style>
 
-    <style name="actionBarTheme" parent="Theme.Wechat">
+    <style name="ActionBarTheme" parent="Theme.Wechat">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
