--- a/LoginDemo/src/main/res/layout/activity_main.xml
+++ b/LoginDemo/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,6 +27,7 @@
                 android:textAlignment="center"
                 android:textSize="@dimen/toolbar_title_text_size"
                 android:textStyle="bold"
+                android:textColor="?android:attr/textColorPrimary"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +72,7 @@
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="@dimen/nav_height"
         android:background="?android:attr/windowBackground"
         android:theme="@style/BottomNavigationTheme"
         app:itemRippleColor="@null"
