--- a/LoginDemo/src/main/res/values/dimens.xml
+++ b/LoginDemo/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="padding_option">8dp</dimen>
     <dimen name="margin_func_divide">8dp</dimen>
     <dimen name="description_option">17sp</dimen>
+    <dimen name="nav_height">57dp</dimen>
 </resources>
