--- a/LoginDemo/src/main/res/layout/activity_services.xml
+++ b/LoginDemo/src/main/res/layout/activity_services.xml
@@ -10,8 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:theme="@style/ActionBarTheme">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/back"
@@ -25,7 +24,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical|center"
             android:text="服务"
-            android:textColor="@android:color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="@dimen/toolbar_title_text_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
