--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -11,8 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:theme="@style/ActionBarTheme">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/back"
@@ -26,6 +25,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical|center"
             android:text="设置"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="@dimen/toolbar_title_text_size"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
