--- a/LoginDemo/src/main/res/values-night/themes.xml
+++ b/LoginDemo/src/main/res/values-night/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 应用主要主题  -->
     <style name="Theme.Wechat" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">#424040</item>
+        <item name="colorPrimaryVariant">#2B2B2B</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/wechat_green</item>
@@ -12,8 +13,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
+    <!-- 一些组件的主题 -->
     <style name="SwitchTheme">
         <item name="colorControlActivated">@color/wechat_green</item>
     </style>
@@ -27,15 +30,9 @@
         <item name="colorPrimary">@color/white</item>
     </style>
 
-    <style name="ActionBarTheme" parent="Theme.Wechat">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
-    </style>
-
+    <!-- 底部导航栏的主题 -->
     <style name="BottomNavigationTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/wechat_green</item>
-        <item name="android:textColorSecondary">@color/black</item>
     </style>
 
 </resources>
