--- a/LoginDemo/src/main/res/values/themes.xml
+++ b/LoginDemo/src/main/res/values/themes.xml
@@ -1,12 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 应用主要主题  -->
     <style name="Theme.Wechat" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/gray</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/wechat_green</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">#50000000</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -38,7 +39,6 @@
     <!-- 底部导航栏的主题 -->
     <style name="BottomNavigationTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/wechat_green</item>
-        <item name="colorSecondary">@color/purple_500</item>
     </style>
 
 </resources>
