--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -54,6 +54,7 @@
             android:paddingStart="@dimen/padding_option"
             android:paddingEnd="@dimen/padding_option"
             android:text="跟随系统"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="25sp" />
 
         <TextView
@@ -85,6 +86,7 @@
             android:paddingStart="@dimen/padding_option"
             android:paddingEnd="@dimen/padding_option"
             android:text="深色模式"
+            android:textColor="?android:attr/textColorPrimary"
             android:textSize="25sp" />
 
         <TextView
